# LuxMusic

./: .env.example  .gitignore  README.md  gradle.properties  lint.xml  pyproject.toml  readme.md  settings.gradle.kts
.github/workflows/: ci.yml  nightly.yml  release.yml
app/: build.gradle.kts  db.py  deps.py  main.py  models.py  proguard-rules.pro  schemas.py
app/api/: admin.py  auth.py  playlists.py  tracks.py  users.py
app/core/: config.py  security.py
app/services/: importer.py  recommendations.py
app/src/main/: AndroidManifest.xml
app/src/main/java/com/luxmusic/android/: LuxMusicApp.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/luxmusic/android/data/: LibraryStore.kt  MetadataExtractor.kt  Models.kt
app/src/main/java/com/luxmusic/android/download/: DownloadAccountStore.kt  DownloadCore.kt  DownloadMetadataResolver.kt  DownloadParsing.kt  DownloadPlanner.kt  LinkDownloadExecutor.kt  LinkDownloader.kt  YtDlpMediaDownloadBackend.kt
app/src/main/java/com/luxmusic/android/playback/: PlaybackController.kt  PlaybackNotificationService.kt
app/src/main/java/com/luxmusic/android/ui/: DownloadAccountLoginDialog.kt  LibraryUi.kt  LuxCollectionPages.kt  LuxHomePage.kt  LuxMusicCards.kt  LuxMusicRoot.kt  LuxMusicScreen.kt  LuxMusicVisuals.kt  PlaybackUi.kt  UiCommon.kt
app/src/main/res/layout/: playback_notification_compact.xml  playback_notification_expanded.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-v27/: themes.xml
docs/: download-module-rewrite.md
signing/: luxmusic-dev.jks
(+8 files in other folders)
