[project]
name = "luxmusic"
version = "0.1.0"
description = "Backend API for LuxMusic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"aiosqlite>=0.21.0",
	"bcrypt>=4.3.0",
	"email-validator>=2.3.0",
	"fastapi>=0.115.0",
	"passlib[bcrypt]>=1.7.4",
	"pydantic-settings>=2.11.0",
	"python-jose[cryptography]>=3.5.0",
	"python-multipart>=0.0.20",
	"sqlalchemy>=2.0.40",
	"uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
	"httpx>=0.28.1",
	"pytest>=8.4.0",
	"pytest-asyncio>=1.1.0",
]
